re PR rtl-optimization/41085 (cris-elf gcc.dg/pr28796-2.c)

PR rtl-optimization/41085
	Backport from mainline
	2010-07-27  Bernd Schmidt  <bernds@codesourcery.com>

	PR rtl-optimization/45051
	* reload1.c (delete_output_reload): Use refers_to_regno_p rather
	than reg_mentioned_p.

From-SVN: r164498